# lgn-coprocessor

./: .env  .envrc  .gitignore  .gitmodules  CHANGELOG.md  CONFIGURATION.md  Cargo.toml  README.md  cliff.toml  devenv.nix  rust-toolchain  rustfmt.toml  verify_checksums.sh
.github/: changelog.sh
.github/workflows/: docker.yml  gen-params.yaml  prepare-release.yaml  release.yaml  rust.yml
docker/base/: Dockerfile
docker/worker/: Dockerfile
lgn-auth/: Cargo.toml
lgn-auth/src/: jwt.rs
lgn-messages/: Cargo.toml  README.md
lgn-messages/src/: lib.rs
lgn-messages/src/routing/: mod.rs
lgn-messages/src/types/: mod.rs
lgn-messages/src/types/experimental/: mod.rs
lgn-messages/src/types/experimental/rec_proof/: keys.rs  mod.rs
lgn-messages/src/types/experimental/tx_trie/: block.rs  block_range.rs  keys.rs  mod.rs
lgn-messages/src/types/v0/: mod.rs
lgn-messages/src/types/v0/groth16/: keys.rs  mod.rs
lgn-messages/src/types/v0/preprocessing/: keys.rs  mod.rs
lgn-messages/src/types/v0/query/: keys.rs  mod.rs
lgn-messages/src/types/v0/query/erc20/: keys.rs  mod.rs
lgn-messages/src/types/v1/: mod.rs  query.rs
lgn-messages/src/types/v1/groth16/: keys.rs  mod.rs
lgn-messages/src/types/v1/preprocessing/: db_keys.rs  db_tasks.rs  ext_keys.rs  ext_tasks.rs  keys.rs  mod.rs  task.rs
lgn-messages/src/types/v1/query/: keys.rs  mod.rs  tasks.rs
lgn-messages/src/v1/: mod.rs  query.rs
lgn-messages/src/v1/preprocessing/: batched.rs  db_tasks.rs  ext_tasks.rs  mod.rs
lgn-provers/: Cargo.toml  README.md
lgn-provers/src/: lib.rs  main.rs
lgn-provers/src/params/: checksum.txt  mod.rs
lgn-provers/src/provers/: mod.rs
lgn-provers/src/provers/v0/: mod.rs
lgn-provers/src/provers/v0/groth16/: dummy_prover.rs  mod.rs  prover.rs  task.rs
lgn-provers/src/provers/v0/preprocessing/: dummy_prover.rs  mod.rs  prover.rs  task.rs
lgn-provers/src/provers/v0/query/: dummy_prover.rs  mod.rs  prover.rs  task.rs
lgn-provers/src/provers/v0/query/erc20/: dummy_prover.rs  mod.rs  prover.rs  task.rs
lgn-provers/src/provers/v0/query/erc721/: dummy_prover.rs  mod.rs  prover.rs  task.rs
lgn-provers/src/provers/v1/: mod.rs
lgn-provers/src/provers/v1/groth16/: dummy_prover.rs  euclid_prover.rs  mod.rs  prover.rs  task.rs
lgn-provers/src/provers/v1/preprocessing/: dummy_prover.rs  euclid_prover.rs  mod.rs  prover.rs  task.rs
lgn-provers/src/provers/v1/query/: dummy_prover.rs  euclid_prover.rs  mod.rs  prover.rs  task.rs
lgn-worker/: Cargo.toml  README.md  build.rs  public_params.hash
lgn-worker/abis/: AVSDirectoryABI.json  DelegationManagerABI.json  ZKMRStakeRegistryABI.json
lgn-worker/src/: checksum.rs  lib.rs  main.rs  manager.rs  one-shot.rs  task_difficulty.rs
lgn-worker/src/avs/: contract.rs  mod.rs  public_key.rs  utils.rs
lgn-worker/src/config/: default.toml  mod.rs
lgn-worker/src/grpc/: mod.rs  test.rs
lgn-worker/src/manager/: mod.rs  v0.rs  v1.rs
lgn-worker/src/metrics/: mod.rs
runtime/: lagr-keystore.json
