[workspace]
resolver = "2"
members = ["lgn-auth", "lgn-messages", "lgn-provers", "lgn-worker"]

[workspace.dependencies]
groth16_framework_v1 = { git = "https://github.com/Lagrange-Labs/mapreduce-plonky2.git", rev = "1.2.1", package = "groth16_framework" }
mp2_common = { git = "https://github.com/Lagrange-Labs/mapreduce-plonky2.git", rev = "1.2.1" }
mp2_v1 = { git = "https://github.com/Lagrange-Labs/mapreduce-plonky2.git", rev = "1.2.1" }
parsil = { git = "https://github.com/Lagrange-Labs/mapreduce-plonky2.git", rev = "1.2.1" }
verifiable-db = { git = "https://github.com/Lagrange-Labs/mapreduce-plonky2.git", rev = "1.2.1" }

anyhow = { version = "1.0" }
bincode = { version = "1.0" }
blake3 = { version = "1", features = ["rayon"] }
ethers = { version = "2.0" }
hex = { version = "0.4" }
object_store = { version = "0.11" }
rand = { version = "0.8", default-features = false }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "1.0" }
tokio = { version = "1.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
alloy = { version = "0.6", default-features = false }
alloy-primitives = "0.8.14"
backtrace = "0.3"
base64 = "0.22"
bytes = "1.0"
clap = { version = "4.4", default-features = false }
config = { version = "0.14", default-features = false }
derive-debug-plus = "0.5"
elliptic-curve = { version = "0.13", default-features = false }
ethers-core = { git = "https://github.com/Lagrange-Labs/ethers-rs", branch = "get-proof-0x", default-features = false }
generic-array = { version = "0.14", default-features = false }
jwt = "0.16"
k256 = { version = "0.13", default-features = false }
lazy-static-include = "3.2.1"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
miette = "7.2.0"
mimalloc = { version = "0.1", default-features = false }
prost = "0.13"
protox = "0.7.1"
redact = "0.1"
rpassword = "7.0"
serde_derive = "1.0"
tokio-stream = "0.1"
tonic = "0.12"
tonic-build = "0.12.3"

[patch.crates-io]
plonky2 = { git = "https://github.com/Lagrange-Labs/plonky2", branch = "upstream" }
plonky2_field = { git = "https://github.com/Lagrange-Labs/plonky2", branch = "upstream" }

[profile.dev]
# Reference: https://doc.rust-lang.org/cargo/reference/profiles.html#dev
# Proving is too slow without optimizations
opt-level = 3

[profile.release]
# Reference: https://doc.rust-lang.org/cargo/reference/profiles.html#release
# Proving is a bottleneck, enable agressive optimizations.
# Reference: https://nnethercote.github.io/perf-book/build-configuration.html#codegen-units
codegen-units = 1
lto = "fat"

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace.metadata.cargo-machete]
ignored = ["serde", "prost"]

# [patch."https://github.com/Lagrange-Labs/mapreduce-plonky2.git"]
# mp2_common = { path = "../mapreduce-plonky2/main/mp2-common/" }
# mp2_v1 = { path = "../mapreduce-plonky2/main/mp2-v1/" }
# parsil = { path = "../mapreduce-plonky2/main/parsil/" }
# verifiable-db = { path = "../mapreduce-plonky2/main/verifiable-db/" }
# ryhope = { path = "../mapreduce-plonky2/main/ryhope/" }
# groth16_framework_v1 = { package = "groth16_framework", path = "../mapreduce-plonky2/main/groth16-framework/" }

[workspace.metadata.release]
publish = false
pre-release-hook = ["sh", "../.github/changelog.sh"]
