[workspace]
resolver = "2"
members = ["lgn-auth", "lgn-messages", "lgn-provers", "lgn-worker"]

[workspace.dependencies]
groth16_framework = { git = "https://github.com/Lagrange-Labs/mapreduce-plonky2.git", branch = "main" }
mp2_common = { git = "https://github.com/Lagrange-Labs/mapreduce-plonky2.git", branch = "main" }
mp2_v1 = { git = "https://github.com/Lagrange-Labs/mapreduce-plonky2.git", branch = "main" }
parsil = { git = "https://github.com/Lagrange-Labs/mapreduce-plonky2.git", branch = "main" }
verifiable-db = { git = "https://github.com/Lagrange-Labs/mapreduce-plonky2.git", branch = "main" }

alloy = { version = "0.15", features = [ "serde" ] }
anyhow = { version = "1.0" }
backtrace = { version = "0.3" }
base64 = { version = "0.22" }
bincode = { version = "1" }
blake3 = { version = "1", features = ["mmap", "rayon"] }
bytes = { version = "1.10" }
clap = { version = "4.5", default-features = false }
config = { version = "0.15", default-features = false }
derive-debug-plus = { version = "0.5" }
elliptic-curve = { version = "0.13", default-features = false }
ethers = { version = "2.0" }
ethers-core = { git = "https://github.com/Lagrange-Labs/ethers-rs", branch = "get-proof-0x", default-features = false }
generic-array = { version = "0.14", default-features = false }
hex = { version = "0.4" }
jwt = { version = "0.16" }
k256 = { version = "0.13", default-features = false }
lazy-static-include = { version = "3.2.1" }
metrics = { version = "0.24" }
metrics-exporter-prometheus = { version = "0.17" }
miette = { version = "7.5.0" }
mimalloc = { version = "0.1", default-features = false }
object_store = { version = "0.12" }
prost = { version = "0.13" }
prost-types = { version = "0.13" }
protox = { version = "0.8" }
rand = { version = "0.8", default-features = false }
redact = { version = "0.1" }
reqwest = { version = "0.12", features = ["blocking"] }
rpassword = { version = "7.3" }
rustls = { version = "0.23.25" }
semver = { version = "1.0.26" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = { version = "1.0" }
serde_json = { version = "1.0" }
thiserror = { version = "2" }
tokio = { version = "1.44" }
tokio-stream = { version = "0.1" }
tonic = { version = "0.13", features = [ "transport", "tls-webpki-roots" ] }
tonic-build = { version = "0.13" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.16.0" }
warp = { version = "0.3.7" }

[patch.crates-io]
plonky2 = { git = "https://github.com/Lagrange-Labs/plonky2", branch = "upstream" }
plonky2_field = { git = "https://github.com/Lagrange-Labs/plonky2", branch = "upstream" }

[profile.dev]
# Reference: https://doc.rust-lang.org/cargo/reference/profiles.html#dev
# Proving is too slow without optimizations
opt-level = 3

[profile.release]
# Reference: https://doc.rust-lang.org/cargo/reference/profiles.html#release
# Proving is a bottleneck, enable agressive optimizations.
# Reference: https://nnethercote.github.io/perf-book/build-configuration.html#codegen-units
lto = "fat"

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace.metadata.cargo-machete]
ignored = ["serde", "prost"]

[workspace.metadata.cargo-shear]
ignored = ["prost"]

# [patch."https://github.com/Lagrange-Labs/mapreduce-plonky2.git"]
# mp2_common = { path = "../mapreduce-plonky2/main/mp2-common/" }
# mp2_v1 = { path = "../mapreduce-plonky2/main/mp2-v1/" }
# parsil = { path = "../mapreduce-plonky2/main/parsil/" }
# verifiable-db = { path = "../mapreduce-plonky2/main/verifiable-db/" }
# ryhope = { path = "../mapreduce-plonky2/main/ryhope/" }
# groth16_framework = { path = "../mapreduce-plonky2/main/groth16-framework/" }

[workspace.metadata.release]
publish = false
pre-release-hook = ["sh", "../.github/changelog.sh"]
