[package]
name = "lgn-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
base64 = { version = "0.22" }
elliptic-curve = { version = "0.13", default-features = false }
ethers = { git = "https://github.com/Lagrange-Labs/ethers-rs", default-features = false, features = ["rustls"], branch = "get-proof-0x" }
ethers-core = { git = "https://github.com/Lagrange-Labs/ethers-rs", default-features = false, branch = "get-proof-0x" }
generic-array = { version = "0.14.7", default-features = false }
hex = { version = "0.4" }
jwt = { version = "0.16" }
rand = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
