[package]
name = "lgn-auth"
version = "1.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

base64 = { workspace = true }
elliptic-curve = { workspace = true }
ethers = { git = "https://github.com/Lagrange-Labs/ethers-rs", default-features = false, features = [ "rustls" ], branch = "get-proof-0x" }
ethers-core = { workspace = true }
generic-array = { workspace = true }
jwt = { workspace = true }
rand = { workspace = true }
