[package]
name = "lgn-auth"
version = "1.1.2"
edition = "2021"

[dependencies]
tracing = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
elliptic-curve = { workspace = true }
alloy = { workspace = true }
generic-array = { workspace = true }
hex = { workspace = true }
jwt = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
