[package]
name = "lgn-messages"
version = "1.1.2"
edition = "2021"

[dependencies]
ethers = { workspace = true }
mp2_common = { workspace = true }
mp2_v1 = { workspace = true }
object_store = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
verifiable-db = { workspace = true }

alloy-primitives = { workspace = true }
derive-debug-plus = { workspace = true }
serde_derive = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["serde"]
