[package]
name = "lgn-messages"
version = "1.1.10"
edition = "2021"

[dependencies]
alloy.workspace = true
derive-debug-plus = { workspace = true }
mp2_common = { workspace = true }
mp2_v1 = { workspace = true }
object_store = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
thiserror = { workspace = true }
verifiable-db = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["serde"]
