[package]
name = "lgn-provers"
version = "1.1.8"
edition = "2021"

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
blake3.workspace = true
bytes = { workspace = true }
ethers = { workspace = true }
groth16_framework = { workspace = true }
metrics = { workspace = true }
mp2_common = { workspace = true }
mp2_v1 = { workspace = true }
parsil = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
serde_json = { workspace = true }
tracing = { workspace = true }
verifiable-db = { workspace = true }

lgn-messages = { path = "../lgn-messages" }
exponential-backoff = "2.0.0"

[features]
dummy-prover = []
