[package]
name = "lgn-provers"
version = "2.0.0"
edition = "2021"

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
blake3.workspace = true
bytes = { workspace = true }
futures = { workspace = true }
groth16_framework = { workspace = true }
mp2_common = { workspace = true }
mp2_v1 = { workspace = true }
parsil = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tempfile = "3"
verifiable-db = { workspace = true }

lgn-messages = { path = "../lgn-messages" }
exponential-backoff = "2.0.0"

[features]
dummy-prover = []
