[package]
name = "lgn-worker"
version = "1.1.2"
edition = "2021"

[[bin]]
name = "lgn-avs"
path = "bin/avs.rs"

[[bin]]
name = "one-shot"
path = "src/one-shot.rs"

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
checksums = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"]  }
rand = { workspace = true, default-features = false, features = [ "std", "std_rng", "getrandom", "min_const_gen" ]  }
reqwest = { workspace = true, features = ["blocking"] }

# The ethers macro `abigen` needs to import ethers as a crate.
backtrace = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "help", "std", "suggestions"] }
config = { workspace = true, features = ["toml"] }
elliptic-curve = { workspace = true }
# The ethers macro `abigen` needs to import ethers as a crate.
ethers = { git = "https://github.com/Lagrange-Labs/ethers-rs", default-features = false, features = [ "rustls" ], branch = "get-proof-0x" }
jwt = { workspace = true }
k256 = { workspace = true, features = ["ecdsa", "std"] }
lazy-static-include = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
mimalloc = { workspace = true }
redact = { workspace = true, features = ["serde"] }
rpassword = { workspace = true }
serde_derive = { workspace = true }
tungstenite = { workspace = true, features = ["rustls"] }
tonic = { workspace = true }
prost = { workspace = true }
tokio-stream = { workspace = true }

lgn-auth = { path = "../lgn-auth" }
lgn-messages = { path = "../lgn-messages" }
lgn-provers = { path = "../lgn-provers" }
prost-types = "0.13.4"
prost-wkt-types = "0.6.0"

[build-dependencies]
miette = { workspace = true }
tonic-build = { workspace = true }
protox = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["prost"]
