[package]
name = "lgn-worker"
version = "1.1.6"
edition = "2021"

[[bin]]
name = "lgn-avs"
path = "bin/avs.rs"

[[bin]]
name = "one-shot"
path = "src/one-shot.rs"

[dependencies]
anyhow = { workspace = true }
backtrace = { workspace = true }
blake3.workspace = true
clap = { workspace = true, features = ["derive", "env", "help", "std", "suggestions"] }
config = { workspace = true, features = ["toml"] }
elliptic-curve = { workspace = true }
# The ethers macro `abigen` needs to import ethers as a crate.
ethers = { git = "https://github.com/Lagrange-Labs/ethers-rs", default-features = false, features = [ "rustls" ], branch = "get-proof-0x" }
hex = { workspace = true }
jwt = { workspace = true }
k256 = { workspace = true, features = ["ecdsa", "std"] }
lazy-static-include = { workspace = true }
lgn-auth = { path = "../lgn-auth" }
lgn-messages = { path = "../lgn-messages" }
lgn-provers = { path = "../lgn-provers" }
metrics-exporter-prometheus = { workspace = true }
metrics = { workspace = true }
mimalloc = { workspace = true }
mp2_common.workspace = true
prost-types = "0.13.4"
prost-wkt-types = "0.6.0"
prost = { workspace = true }
rand = { workspace = true, default-features = false, features = [ "std", "std_rng", "getrandom", "min_const_gen" ]  }
redact = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["blocking"] }
rpassword = { workspace = true }
semver = "1.0.25"
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio-stream = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"]  }
tonic = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing = { workspace = true }
verifiable-db.workspace = true
exponential-backoff = "2.0.0"
rustl = "0.0.1"
rustls = { version = "0.23.21", features = [ "ring" ] }
uuid = "1.13.2"
warp = "0.3.7"

[build-dependencies]
miette = { workspace = true }
tonic-build = { workspace = true }
protox = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["prost"]

[features]
dummy-prover = ["lgn-provers/dummy-prover"]
