[package]
name = "lgn-worker"
version = "2.0.1"
edition = "2021"

[[bin]]
name = "lgn-avs"
path = "bin/avs.rs"

[[bin]]
name = "gen-params"
path = "bin/gen-params.rs"

[[bin]]
name = "one-shot"
path = "src/one-shot.rs"

[dependencies]
alloy = { workspace = true, features = ["signers", "signer-local", "signer-keystore"] }
anyhow = { workspace = true }
backtrace = { workspace = true }
bincode.workspace = true
blake3 = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "help", "std", "suggestions"] }
config = { workspace = true, features = ["toml"] }
elliptic-curve = { workspace = true }
groth16_framework.workspace = true
hex = { workspace = true }
jwt = { workspace = true }
k256 = { workspace = true, features = ["ecdsa", "std"] }
lazy-static-include = { workspace = true }
lgn-auth = { path = "../lgn-auth" }
lgn-messages = { path = "../lgn-messages" }
lgn-provers = { path = "../lgn-provers" }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
mimalloc = { workspace = true }
mp2_v1.workspace = true
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true, default-features = false, features = [ "std", "std_rng", "getrandom", "min_const_gen" ]  }
redact = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["blocking"] }
rpassword = { workspace = true }
rustls = { workspace = true, features = [ "ring" ] }
semver = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"]  }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
uuid = { workspace = true }
verifiable-db.workspace = true
walkdir = "2.5.0"
warp = { workspace = true }

[build-dependencies]
miette = { workspace = true }
tonic-build = { workspace = true }
protox = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["prost", "prost-types"]

[package.metadata.cargo-machete]
ignored = ["prost-types"]

[features]
dummy-prover = ["lgn-provers/dummy-prover"]
